# FastMCP-Proper

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml  publish.yml
src/mcp_server_package/: config.py  schemas.py
src/my_package/: __init__.py  api.py  example.py  models.py  module.py  run.py
tests/: integration_test.py  test_api.py  test_endpoints.py  test_example.py  test_module.py
