[project]
name = "my_package"
version = "0.1.0"
description = "A modern Python template with FastAPI integration"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "pydantic>=2.6.3",
    "httpx>=0.27.0",             # For testing HTTP clients
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "types-requests",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-cov", "pre-commit", "types-requests"]

[project.urls]
Homepage = "https://github.com/yourusername/2024-Python-Best-Practices-Launchpad"
Documentation = "https://github.com/yourusername/2024-Python-Best-Practices-Launchpad#readme"
Repository = "https://github.com/yourusername/2024-Python-Best-Practices-Launchpad.git"
Issues = "https://github.com/yourusername/2024-Python-Best-Practices-Launchpad/issues"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
mypy_path = "src"
python_version = "3.10"
strict = true
[[tool.mypy.overrides]]
module = ["uvicorn.*"]
ignore_missing_imports = true
